--- a/friends.html
+++ b/friends.html
@@ -124,12 +124,12 @@
           /></a>
         </li>
         <li class="nav_btn">
-          <a class="nav_link" href="Find.html"
+          <a class="nav_link" href="find.html"
             ><img src="아이콘/loupe.png"
           /></a>
         </li>
         <li class="nav_btn">
-          <a class="nav_link" href="More.html">
+          <a class="nav_link" href="more.html">
             <span class="nav-dot"> </span><img src="아이콘/more.png"
           /></a>
         </li>
