--- a/settings.html
+++ b/settings.html
@@ -79,8 +79,8 @@
       <span class="nav-notification badge">
         1
       </span><img src="아이콘\speech-bubble.png"></a></li>
-    <li class="nav_btn"><a class="nav_link" href="Find.html"><img src="아이콘\loupe.png"></a></li>
-    <li class="nav_btn"><a class="nav_link" href="More.html">
+    <li class="nav_btn"><a class="nav_link" href="find.html"><img src="아이콘\loupe.png"></a></li>
+    <li class="nav_btn"><a class="nav_link" href="more.html">
       <span class="nav-dot">
       </span><img src="아이콘\more.png"></a></li>
   </ul>
