--- a/chat2.html
+++ b/chat2.html
@@ -44,7 +44,7 @@
   </div>
 
 <div class="message-row ">
-  <img src="http://img.dmitory.com/img/201804/1iQ/jvx/1iQjvxM0oOykksOsKm2Eky.gif" alt="">
+  <img src="https://64.media.tumblr.com/4769eccdb66c3f727c7660f21df74507/284e69a9b52f508f-78/s540x810/1ce79c80412a716fc50f8c82d3d8e00e45858cd4.gif" alt="">
   <div class="message-row_content">
     <span class="message_author">히에이</span>
     <div class="message_info">
@@ -71,7 +71,7 @@
   </div>
 </div>
 <div class="message-row ">
-  <img src="http://img.dmitory.com/img/201804/1iQ/jvx/1iQjvxM0oOykksOsKm2Eky.gif" alt="">
+  <img src="https://64.media.tumblr.com/4769eccdb66c3f727c7660f21df74507/284e69a9b52f508f-78/s540x810/1ce79c80412a716fc50f8c82d3d8e00e45858cd4.gif" alt="">
   <div class="message-row_content">
     <span class="message_author">히에이</span>
     <div class="message_info">
@@ -102,7 +102,7 @@
   <div class="chat-timestamp other-day">
     2023년 1월 28일</div>
     <div class="message-row ">
-      <img src="http://img.dmitory.com/img/201804/1iQ/jvx/1iQjvxM0oOykksOsKm2Eky.gif" alt="">
+      <img src="https://64.media.tumblr.com/4769eccdb66c3f727c7660f21df74507/284e69a9b52f508f-78/s540x810/1ce79c80412a716fc50f8c82d3d8e00e45858cd4.gif" alt="">
       <div class="message-row_content">
         <span class="message_author">히에이</span>
         <div class="message_info">
