--- a/chats.html
+++ b/chats.html
@@ -51,7 +51,7 @@
         <div class="user-component">
           <div class="user-component_column">
             <img
-              src="http://img.dmitory.com/img/201804/1iQ/jvx/1iQjvxM0oOykksOsKm2Eky.gif"
+              src="https://64.media.tumblr.com/4769eccdb66c3f727c7660f21df74507/284e69a9b52f508f-78/s540x810/1ce79c80412a716fc50f8c82d3d8e00e45858cd4.gif"
               class="user-component_avatar user-component_avatar"
             />
             <div class="user-component_text">
