--- a/more.html
+++ b/more.html
@@ -85,7 +85,7 @@
   <h4 class="more-suggestions_title">Sugeenstions</h4>
 <div class="more-suggestions_icons">
 <div class="more-suggestions_icon">
-  <div class="more-suggestions_icon-image"><img src="https://i3.ruliweb.com/img/5/5/0/8/5508D5E2415887002F" width="50px" height="50px"/>
+  <div class="more-suggestions_icon-image"><img src="https://www.sputnik.kr/article_img/202012/article_1608078318.jpg" width="50px" height="50px"/>
   
   </div>
   <span class="more-suggestions_icon-text">유유백서</span>
